src/styles.scss
.rotate {
  animation: rotate 0.6s infinite linear;
}

@keyframes rotate {
  from {
    transform: rotate(360deg);
  }
  to {
    transform: rotate(0deg);
  }
}

.sizing {
  animation: sizing 1.2s infinite linear;
}

@keyframes sizing {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.3);
  }
  100% {
    transform: scale(1);
  }
}

.bg {
  background-image: linear-gradient(
    to left bottom,
    #f8f8f8,
    #e7e7e7,
    #f5f5f5,
    #cbcbcb,
    #c0c0c0
  );
  min-height: 100vh;
}

body {
  margin: 0;
  padding: 0;
  --swiper-theme-color: #ea2b06;
  --swiper-navigation-size: 24px;
}

div.swiper-main {
  .swiper-slide {
    height: auto;
    display: flex;
    align-items: center;
  }
}

div.swiper-thumbs {
  margin-top: 10px;
  margin-left: 10px;
  margin-right: 10px;
  box-sizing: border-box;

  .swiper-slide {
    display: block;
    opacity: 0.33;
    height: auto;
    border-radius: 10px;
    overflow: hidden;
  }

  .swiper-slide-thumb-active {
    opacity: 1;
  }

  .swiper-slide img {
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
}

